force-app/main/default/objects/Approval_Process__c/Approval_Process__c.object-meta.xml
<CustomObject>
    <description>BRD Approval Process</description>
    <label>BRD Checklist</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Approval Process Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BRD Checklist</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>