force-app/main/default/objects/Approval_Process__c/fields/Approval_Stage_Roll_up__c.field-meta.xml
<CustomField>
    <fullName>Approval_Stage_Roll_up__c</fullName>
    <description>To be used as a roll-up to the HomeServices BRD Process</description>
    <formula>Text( BRD_Stage_Details__c )</formula>
    <label>Approval Stage Roll-up</label>
    <type>Text</type>
</CustomField>