force-app/main/default/objects/Approval_Process__c/fields/BRD_Compliance_Distribution_Date__c.field-meta.xml
<CustomField>
    <fullName>BRD_Compliance_Distribution_Date__c</fullName>
    <label>BRD Compliance Distribution Date</label>
    <type>Date</type>
</CustomField>