force-app/main/default/objects/Approval_Process__c/fields/BRD_Stage__c.field-meta.xml
<CustomField>
    <fullName>BRD_Stage__c</fullName>
    <inlineHelpText>Locked field that is updated based on Approval Stage Details</inlineHelpText>
    <label>BRD Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pre Distribution</fullName>
            </value>
            <value>
                <fullName>BRD Approval</fullName>
            </value>
            <value>
                <fullName>Get Contract</fullName>
            </value>
            <value>
                <fullName>Setup &amp; Testing</fullName>
            </value>
            <value>
                <fullName>Launch</fullName>
            </value>
            <value>
                <fullName>Post Launch Audit</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>