force-app/main/default/objects/Approval_Process__c/fields/BRD_Stage_Details__c.field-meta.xml
<CustomField>
    <fullName>BRD_Stage_Details__c</fullName>
    <description>Shows the Stage the Approval Process is in.</description>
    <label>BRD Stage Details</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BRD Submitted</fullName>
                <default>true</default>
                <label>BRD Submitted</label>
            </value>
            <value>
                <fullName>Pre Dist - Additional Question for AM</fullName>
            </value>
            <value>
                <fullName>Cancelled / Closed Lost</fullName>
            </value>
            <value>
                <fullName>BRD Rejected</fullName>
            </value>
            <value>
                <fullName>BRD Distributed</fullName>
            </value>
            <value>
                <fullName>BRD Approval - Additional question for AM</fullName>
            </value>
            <value>
                <fullName>Solution Development</fullName>
            </value>
            <value>
                <fullName>Waiting on Delinquent Approval</fullName>
            </value>
            <value>
                <fullName>Get Contract</fullName>
            </value>
            <value>
                <fullName>Contract Approved</fullName>
            </value>
            <value>
                <fullName>Setup</fullName>
            </value>
            <value>
                <fullName>Testing</fullName>
            </value>
            <value>
                <fullName>Waiting for Launch</fullName>
            </value>
            <value>
                <fullName>Post Launch Audit</fullName>
            </value>
            <value>
                <fullName>Transferred to CM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>