force-app/main/default/objects/Approval_Process__c/fields/BRD_Status__c.field-meta.xml
<CustomField>
    <fullName>BRD_Status__c</fullName>
    <inlineHelpText>1.  On Plan - &quot;Program is on plan to hit the scheduled launch date&quot;
2.  Behind Plan - &quot;Program will miss the scheduled launch date&quot;
3.  At Risk - &quot;Program is currently on plan but there are a lot of variables that could throw the program behind plan&quot;</inlineHelpText>
    <label>BRD Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>On Plan</fullName>
            </value>
            <value>
                <fullName>Behind Plan</fullName>
            </value>
            <value>
                <fullName>At Risk</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>