force-app/main/default/objects/Approval_Process__c/fields/BRD_Support_Distributed_Date__c.field-meta.xml
<CustomField>
    <fullName>BRD_Support_Distributed_Date__c</fullName>
    <description>The date the PMO Distributes to Support Teams</description>
    <inlineHelpText>The date the PMO Distributes to Support Teams</inlineHelpText>
    <label>BRD Support Distributed Date</label>
    <type>Date</type>
</CustomField>