force-app/main/default/objects/Approval_Process__c/fields/BRD_Type__c.field-meta.xml
<CustomField>
    <fullName>BRD_Type__c</fullName>
    <formula>TEXT(Home_Services_BRD_Process__r.Client_Type__c )</formula>
    <inlineHelpText>Displays the select BRD Type</inlineHelpText>
    <label>BRD Type</label>
    <type>Text</type>
</CustomField>