force-app/main/default/objects/Approval_Process__c/fields/BRD_updated_to_reflect_offer__c.field-meta.xml
<CustomField>
    <fullName>BRD_updated_to_reflect_offer__c</fullName>
    <label>BRD updated to reflect offer</label>
    <type>Date</type>
</CustomField>