force-app/main/default/objects/Approval_Process__c/fields/Business_Case_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Business_Case_Completed_Date__c</fullName>
    <label>Business Case Completed Date</label>
    <type>Date</type>
</CustomField>