force-app/main/default/objects/Approval_Process__c/fields/Business_Integration_Manager_Completed__c.field-meta.xml
<CustomField>
    <fullName>Business_Integration_Manager_Completed__c</fullName>
    <label>Business Integration Manager Completed</label>
    <type>Date</type>
</CustomField>