force-app/main/default/objects/Approval_Process__c/fields/Business_Integration_Manager_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Business_Integration_Manager_Due_Date__c</fullName>
    <label>Business Integration Manager Due Date</label>
    <type>Date</type>
</CustomField>