force-app/main/default/objects/Approval_Process__c/fields/Call_with_client_NCC_CCN__c.field-meta.xml
<CustomField>
    <fullName>Call_with_client_NCC_CCN__c</fullName>
    <label>Call with client, NCC, CCN</label>
    <type>Date</type>
</CustomField>