force-app/main/default/objects/Approval_Process__c/fields/Carry_in_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Carry_in_Completed_Date__c</fullName>
    <label>Carry-in Completed Date</label>
    <type>Date</type>
</CustomField>