force-app/main/default/objects/Approval_Process__c/fields/Carry_in_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Carry_in_Due_Date__c</fullName>
    <label>Carry-in Due Date</label>
    <type>Date</type>
</CustomField>