force-app/main/default/objects/Approval_Process__c/fields/CCN_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>CCN_Completed_Date__c</fullName>
    <label>CCN Completed Date</label>
    <type>Date</type>
</CustomField>