force-app/main/default/objects/Approval_Process__c/fields/CCN_completed_testing_of_agents__c.field-meta.xml
<CustomField>
    <fullName>CCN_completed_testing_of_agents__c</fullName>
    <label>CCN completed testing of agents</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>