force-app/main/default/objects/Approval_Process__c/fields/CCN_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>CCN_Due_Date__c</fullName>
    <label>CCN Due Date</label>
    <type>Date</type>
</CustomField>