force-app/main/default/objects/Approval_Process__c/fields/CCN_Mystery_Shop_by_PM__c.field-meta.xml
<CustomField>
    <fullName>CCN_Mystery_Shop_by_PM__c</fullName>
    <label>CCN Mystery Shop by PM</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>