force-app/main/default/objects/Approval_Process__c/fields/Channel_Manager_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Channel_Manager_Due_Date__c</fullName>
    <label>Channel Manager Due Date</label>
    <type>Date</type>
</CustomField>