force-app/main/default/objects/Approval_Process__c/fields/Channel_Managers_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Channel_Managers_Completed_Date__c</fullName>
    <label>Channel Managers Completed Date</label>
    <type>Date</type>
</CustomField>