force-app/main/default/objects/Approval_Process__c/fields/Communications_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Communications_Completed_Date__c</fullName>
    <label>Communications Completed Date</label>
    <type>Date</type>
</CustomField>