force-app/main/default/objects/Approval_Process__c/fields/Communications_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Communications_Due_Date__c</fullName>
    <label>Communications Due Date</label>
    <type>Date</type>
</CustomField>