force-app/main/default/objects/Approval_Process__c/fields/Compliance_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Completed_Date__c</fullName>
    <label>Compliance Completed Date</label>
    <type>Date</type>
</CustomField>