force-app/main/default/objects/Approval_Process__c/fields/Contract_in_ECM_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_in_ECM_Date__c</fullName>
    <label>Contract in ECM Date</label>
    <type>Date</type>
</CustomField>