force-app/main/default/objects/Approval_Process__c/fields/Contract_Notes__c.field-meta.xml
<CustomField>
    <fullName>Contract_Notes__c</fullName>
    <label>Contract Notes</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>