force-app/main/default/objects/Approval_Process__c/fields/Contract_Signed_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Signed_Date__c</fullName>
    <inlineHelpText>Client has agreed to all terms of the contract and provided signature.</inlineHelpText>
    <label>Contract Signed Date</label>
    <type>Date</type>
</CustomField>