force-app/main/default/objects/Approval_Process__c/fields/Created_ProcIDs_in_NPS__c.field-meta.xml
<CustomField>
    <fullName>Created_ProcIDs_in_NPS__c</fullName>
    <label>Created ProcIDs in NPS</label>
    <type>Date</type>
</CustomField>