force-app/main/default/objects/Approval_Process__c/fields/Created_ProcIDs_in_SST__c.field-meta.xml
<CustomField>
    <fullName>Created_ProcIDs_in_SST__c</fullName>
    <label>Created ProcIDs in SST</label>
    <type>Date</type>
</CustomField>