force-app/main/default/objects/Approval_Process__c/fields/Date_origination_code_created__c.field-meta.xml
<CustomField>
    <fullName>Date_origination_code_created__c</fullName>
    <label>Date origination code created</label>
    <type>Date</type>
</CustomField>