force-app/main/default/objects/Approval_Process__c/fields/Date_TPSCR_sent_to_CCN__c.field-meta.xml
<CustomField>
    <fullName>Date_TPSCR_sent_to_CCN__c</fullName>
    <label>Date TPSCR sent to CCN</label>
    <type>Date</type>
</CustomField>