force-app/main/default/objects/Approval_Process__c/fields/Delivery_Install_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Install_Due_Date__c</fullName>
    <label>Delivery/Install Due Date</label>
    <type>Date</type>
</CustomField>