force-app/main/default/objects/Approval_Process__c/fields/Email_dispatch_confirmation_tested__c.field-meta.xml
<CustomField>
    <fullName>Email_dispatch_confirmation_tested__c</fullName>
    <label>Email dispatch/confirmation tested</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>