force-app/main/default/objects/Approval_Process__c/fields/Engineering_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Engineering_Completed_Date__c</fullName>
    <label>Engineering Completed Date</label>
    <type>Date</type>
</CustomField>