force-app/main/default/objects/Approval_Process__c/fields/Engineering_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Engineering_Due_Date__c</fullName>
    <label>Engineering Due Date</label>
    <type>Date</type>
</CustomField>