force-app/main/default/objects/Approval_Process__c/fields/Established_launch_date_criteria__c.field-meta.xml
<CustomField>
    <fullName>Established_launch_date_criteria__c</fullName>
    <label>Established launch date criteria</label>
    <type>Date</type>
</CustomField>