force-app/main/default/objects/Approval_Process__c/fields/Estimated_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Approval_Date__c</fullName>
    <label>Estimated Approval Date</label>
    <type>Date</type>
</CustomField>