force-app/main/default/objects/Approval_Process__c/fields/Expected_profitability_per_call__c.field-meta.xml
<CustomField>
    <fullName>Expected_profitability_per_call__c</fullName>
    <description>Add once pricing is completed</description>
    <label>Expected profitability per call</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>