force-app/main/default/objects/Approval_Process__c/fields/Finance_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Finance_Completed_Date__c</fullName>
    <label>Finance Completed Date</label>
    <type>Date</type>
</CustomField>