force-app/main/default/objects/Approval_Process__c/fields/General_Notes__c.field-meta.xml
<CustomField>
    <fullName>General_Notes__c</fullName>
    <inlineHelpText>Enter any additional details explaining the BRD Stage and Status</inlineHelpText>
    <label>General Notes</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>