force-app/main/default/objects/Approval_Process__c/fields/Home_Services_BRD_Process__c.field-meta.xml
<CustomField>
    <fullName>Home_Services_BRD_Process__c</fullName>
    <label>Home Services BRD Process</label>
    <referenceTo>Home_Services_BRD_Process__c</referenceTo>
    <relationshipName>Home_Services_BRD_Approval_Process</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>