force-app/main/default/objects/Approval_Process__c/fields/In_home_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>In_home_Completed_Date__c</fullName>
    <label>In-home Completed Date</label>
    <type>Date</type>
</CustomField>