force-app/main/default/objects/Approval_Process__c/fields/IT_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>IT_Completed_Date__c</fullName>
    <label>IT Completed Date</label>
    <type>Date</type>
</CustomField>