force-app/main/default/objects/Approval_Process__c/fields/IT_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>IT_Due_Date__c</fullName>
    <label>IT Due Date</label>
    <type>Date</type>
</CustomField>