force-app/main/default/objects/Approval_Process__c/fields/Launch_Notes__c.field-meta.xml
<CustomField>
    <fullName>Launch_Notes__c</fullName>
    <label>Launch Notes</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>