force-app/main/default/objects/Approval_Process__c/fields/Leadership_Team_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Leadership_Team_Completed_Date__c</fullName>
    <label>Leadership Team Completed Date</label>
    <type>Date</type>
</CustomField>