force-app/main/default/objects/Approval_Process__c/fields/Legal_Licensing_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Legal_Licensing_Due_Date__c</fullName>
    <label>Legal (Licensing) Due Date</label>
    <type>Date</type>
</CustomField>