force-app/main/default/objects/Approval_Process__c/fields/Marketing_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Completed_Date__c</fullName>
    <label>Marketing Completed Date</label>
    <type>Date</type>
</CustomField>