force-app/main/default/objects/Approval_Process__c/fields/Marketing_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Due_Date__c</fullName>
    <label>Marketing Due Date</label>
    <type>Date</type>
</CustomField>