force-app/main/default/objects/Approval_Process__c/fields/NCC_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>NCC_Completed_Date__c</fullName>
    <label>NCC Completed Date</label>
    <type>Date</type>
</CustomField>