force-app/main/default/objects/Approval_Process__c/fields/NCC_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>NCC_Due_Date__c</fullName>
    <label>NCC Due Date</label>
    <type>Date</type>
</CustomField>