force-app/main/default/objects/Approval_Process__c/fields/Obilgor_obtained_from_NCC__c.field-meta.xml
<CustomField>
    <fullName>Obilgor_obtained_from_NCC__c</fullName>
    <label>Obilgor obtained from NCC</label>
    <type>Date</type>
</CustomField>