force-app/main/default/objects/Approval_Process__c/fields/Opportunity_Name__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Name__c</fullName>
    <formula>( Home_Services_BRD_Process__r.Opportunity__r.Name )</formula>
    <label>Opportunity Name</label>
    <type>Text</type>
</CustomField>