force-app/main/default/objects/Approval_Process__c/fields/Parts_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Parts_Completed_Date__c</fullName>
    <label>Parts Completed Date</label>
    <type>Date</type>
</CustomField>