force-app/main/default/objects/Approval_Process__c/fields/Parts_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Parts_Due_Date__c</fullName>
    <label>Parts Due Date</label>
    <type>Date</type>
</CustomField>