force-app/main/default/objects/Approval_Process__c/fields/Post_Launch_call_date__c.field-meta.xml
<CustomField>
    <fullName>Post_Launch_call_date__c</fullName>
    <label>Post Launch call date</label>
    <type>Date</type>
</CustomField>