force-app/main/default/objects/Approval_Process__c/fields/Pricing_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Completed_Date__c</fullName>
    <label>Pricing  Completed Date</label>
    <type>Date</type>
</CustomField>