force-app/main/default/objects/Approval_Process__c/fields/Pricing_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Due_Date__c</fullName>
    <label>Pricing Due Date</label>
    <type>Date</type>
</CustomField>