force-app/main/default/objects/Approval_Process__c/fields/ProcID_sent_to_Post_Launch_Analyst__c.field-meta.xml
<CustomField>
    <fullName>ProcID_sent_to_Post_Launch_Analyst__c</fullName>
    <label>ProcID sent to Post Launch Analyst</label>
    <type>Date</type>
</CustomField>