force-app/main/default/objects/Approval_Process__c/fields/Program_Manager_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Program_Manager_Completed_Date__c</fullName>
    <label>Program Manager Completed Date</label>
    <type>Date</type>
</CustomField>