force-app/main/default/objects/Approval_Process__c/fields/Projected_CPSC_announced_Date__c.field-meta.xml
<CustomField>
    <fullName>Projected_CPSC_announced_Date__c</fullName>
    <label>Projected CPSC announced Date</label>
    <type>Date</type>
</CustomField>