force-app/main/default/objects/Approval_Process__c/fields/Recall_work_Order_Cust_Letters__c.field-meta.xml
<CustomField>
    <fullName>Recall_work_Order_Cust_Letters__c</fullName>
    <label>Recall/work - Order Cust Letters</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>