force-app/main/default/objects/Approval_Process__c/fields/Received_approved_pricing__c.field-meta.xml
<CustomField>
    <fullName>Received_approved_pricing__c</fullName>
    <label>Received approved pricing</label>
    <type>Date</type>
</CustomField>