force-app/main/default/objects/Approval_Process__c/fields/Review_PnP_and_Field_Alert_with_CCN__c.field-meta.xml
<CustomField>
    <fullName>Review_PnP_and_Field_Alert_with_CCN__c</fullName>
    <label>Review PnP and Field Alert with CCN</label>
    <type>Date</type>
</CustomField>