force-app/main/default/objects/Approval_Process__c/fields/Sent_Approved_BRD_Get_contract_email__c.field-meta.xml
<CustomField>
    <fullName>Sent_Approved_BRD_Get_contract_email__c</fullName>
    <label>Sent Approved BRD / Get contract email</label>
    <type>Date</type>
</CustomField>