force-app/main/default/objects/Approval_Process__c/fields/Sent_BRD_Closed_No_Deal__c.field-meta.xml
<CustomField>
    <fullName>Sent_BRD_Closed_No_Deal__c</fullName>
    <label>Sent BRD Closed / No Deal Email</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>