force-app/main/default/objects/Approval_Process__c/fields/Sent_ProcID_obligor_to_NCC__c.field-meta.xml
<CustomField>
    <fullName>Sent_ProcID_obligor_to_NCC__c</fullName>
    <label>Sent ProcID &amp; obligor to NCC</label>
    <type>Date</type>
</CustomField>