force-app/main/default/objects/Approval_Process__c/fields/Sent_Signed_Contract_Received_email__c.field-meta.xml
<CustomField>
    <fullName>Sent_Signed_Contract_Received_email__c</fullName>
    <label>Sent Signed Contract Received email</label>
    <type>Date</type>
</CustomField>