force-app/main/default/objects/Approval_Process__c/fields/Sent_STAC_form__c.field-meta.xml
<CustomField>
    <fullName>Sent_STAC_form__c</fullName>
    <label>Sent STAC form</label>
    <type>Date</type>
</CustomField>