force-app/main/default/objects/Approval_Process__c/fields/Sent_TPSCR_to_CCN__c.field-meta.xml
<CustomField>
    <fullName>Sent_TPSCR_to_CCN__c</fullName>
    <label>Sent TPSCR to CCN</label>
    <type>Date</type>
</CustomField>