force-app/main/default/objects/Approval_Process__c/fields/Service_Contract_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Service_Contract_Completed_Date__c</fullName>
    <label>Service Contract Completed Date</label>
    <type>Date</type>
</CustomField>