force-app/main/default/objects/Approval_Process__c/fields/Service_Contract_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Service_Contract_Due_Date__c</fullName>
    <label>Service Contract Due Date</label>
    <type>Date</type>
</CustomField>