force-app/main/default/objects/Approval_Process__c/fields/STAC_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>STAC_Completed_Date__c</fullName>
    <label>STAC Completed Date</label>
    <type>Date</type>
</CustomField>