force-app/main/default/objects/Approval_Process__c/fields/STAC_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>STAC_Due_Date__c</fullName>
    <label>STAC Due Date</label>
    <type>Date</type>
</CustomField>