force-app/main/default/objects/Approval_Process__c/fields/Support_Teams_Required__c.field-meta.xml
<CustomField>
    <fullName>Support_Teams_Required__c</fullName>
    <label>Support Teams Required</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Field Ops</fullName>
            </value>
            <value>
                <fullName>CCN</fullName>
            </value>
            <value>
                <fullName>NCC</fullName>
            </value>
            <value>
                <fullName>Parts</fullName>
            </value>
            <value>
                <fullName>STAC/ENG</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>IT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>