force-app/main/default/objects/Approval_Process__c/fields/Target_Launch_Date__c.field-meta.xml
<CustomField>
    <fullName>Target_Launch_Date__c</fullName>
    <label>Target Launch Date</label>
    <length>250</length>
    <type>Text</type>
</CustomField>