force-app/main/default/objects/Approval_Process__c/fields/Test_CCN_Call_Creation_Method__c.field-meta.xml
<CustomField>
    <fullName>Test_CCN_Call_Creation_Method__c</fullName>
    <label>Test CCN/Call Creation Method</label>
    <type>Date</type>
</CustomField>