force-app/main/default/objects/Approval_Process__c/fields/Test_Service_Orders_on_SST__c.field-meta.xml
<CustomField>
    <fullName>Test_Service_Orders_on_SST__c</fullName>
    <label>Test Service Orders on SST</label>
    <type>Date</type>
</CustomField>