force-app/main/default/objects/Approval_Process__c/fields/Training_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Training_Due_Date__c</fullName>
    <label>Training Due Date</label>
    <type>Date</type>
</CustomField>