force-app/main/default/objects/Approval_Process__c/fields/Turn_account_over_to_Channel_Ops__c.field-meta.xml
<CustomField>
    <fullName>Turn_account_over_to_Channel_Ops__c</fullName>
    <label>Turn account over to Channel Ops</label>
    <type>Date</type>
</CustomField>