force-app/main/default/objects/Approval_Process__c/validationRules/BRD_Stage_is_locked.validationRule-meta.xml
<ValidationRule>
    <fullName>BRD_Stage_is_locked</fullName>
    <active>true</active>
    <description>BRD Stage is locked and updated via workflow rules only.</description>
    <errorConditionFormula>AND( 
ISCHANGED(  BRD_Stage__c  ), $User.ProfileId &lt;&gt; &quot;00e30000001FeAR&quot;)</errorConditionFormula>
    <errorDisplayField>BRD_Stage__c</errorDisplayField>
    <errorMessage>BRD Stage cannot be edited and is updated based on the Stage Detail selected</errorMessage>
</ValidationRule>